# usign

./: CMakeLists.txt  base64.c  edsign.c  main.c  sha512.c
win32/: mman.c  mman.h
